@@ -21,3 +21,8 @@ while read dir; do
     umount $dir
 done
 
+cat /proc/swaps | grep '^/dev' \
+    | while read path x; do
+	  swapoff $path
+      done
+
