@@ -2,6 +2,9 @@ partman (21) UNRELEASED; urgency=low
 
   * Anton Zinoviev
     - definitions.sh: new functions enable_swap and disable_swap.
+    - init.d/parted: the IDE and SCSI devices are always ordered before
+      the other devices (i.e. LVM) in the main partitioning menu.
+    - init.d/umount_target: add commands to deactivate swap.
   
  -- Anton Zinoviev <zinoviev@debian.org>  Tue,  9 Mar 2004 20:33:10 +0200
 
